# whisper_transcription

./: README.md  pyproject.toml  requirements.txt
data/raw/m4a/: GMT20251016-085202_Recording.m4a
src/: app.py  app_advanced.py  transcribe.py
